[gd_scene load_steps=6 format=2]

[ext_resource path="res://Down Hill.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://CreatRoomControl.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=2]
size = 48
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 48
font_data = ExtResource( 1 )

[node name="CreatRoomControl" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -405.5
margin_top = -277.0
margin_right = 405.5
margin_bottom = 277.0
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
self_modulate = Color( 1, 1, 1, 0.796078 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="TitleLineEdit" type="LineEdit" parent="."]
margin_left = 246.5
margin_top = 151.0
margin_right = 758.5
margin_bottom = 211.0
custom_fonts/font = SubResource( 2 )
placeholder_text = "write room title"

[node name="Label" type="Label" parent="."]
margin_left = 95.5
margin_top = 154.0
margin_right = 210.5
margin_bottom = 207.0
custom_fonts/font = SubResource( 1 )
text = "Title"
align = 1
valign = 1

[node name="Label2" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -212.0
margin_top = 26.0
margin_right = 261.0
margin_bottom = 79.0
custom_fonts/font = SubResource( 1 )
text = "room setting panel"
align = 1
valign = 1

[node name="CreateRoomBtn" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -159.5
margin_top = 130.0
margin_right = 159.5
margin_bottom = 192.0
custom_fonts/font = SubResource( 3 )
text = "Create Room"
icon_align = 1

[node name="ClosePanelBtn" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 339.0
margin_top = -251.0
margin_right = 394.0
margin_bottom = -195.0
custom_fonts/font = SubResource( 3 )
text = "X"
icon_align = 1

[connection signal="pressed" from="CreateRoomBtn" to="." method="_on_CreateRoomBtn_pressed"]
[connection signal="pressed" from="ClosePanelBtn" to="." method="_on_ClosePanelBtn_pressed"]
